# wikipedia_rpa_search

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  utils.py
.github/workflows/: tests.yaml
robots/: robot.py  utils.py  wikipedia_robot.py
src/: config.py  main.py  people_names.json  utils.py
src/DTO/: person_profile.py
src/dto/: person_profile.py
src/robots/: robot.py  wikipedia_robot.py
src/robots/tests/: test_wikipedia_robot.py
src/tests/: test_main.py
